# templates

./: {__name__.html}.html  {__name__.javascript}.js  {__name__.python}.py  {__name__C++ Header}.hpp  {__name__Java}.java  {__name__javascript}.js  {__name__python}.py  {__name__}.cpp  {__name__}.hpp
{__name__ Java}/src/: HelloWorld.java
{__name__ c++ console}/: .gitignore
{__name__ c++ console}/test/: CMakeLists.txt
{__name__C++ Console}/include/: logger.hpp
{__name__C++ Console}/src/: CMakeLists.txt  QuickStart.cpp  main.cpp
{__name__C++ Console}/test/: CMakeLists.txt
{__name__C++ GTK Simple}/: CMakeLists.txt
{__name__C++ GTK Simple}/include/: mainWindow.hpp
{__name__C++ GTK Simple}/res/: gui.glade
{__name__C++ GTK Simple}/src/: CMakeLists.txt  QuickStart.cpp  logger.cpp  main.cpp  mainWindow.cpp
{__name__C++ GTK Simple}/test/: QuickStartTest.cpp
{__name__C++ GTK Window}/: CMakeLists.txt
{__name__C++ GTK Window}/include/: QuickStart.hpp  appWindow.hpp  application.hpp
{__name__C++ GTK Window}/res/: gui.glade
{__name__C++ GTK Window}/src/: CMakeLists.txt  appWindow.cpp  application.cpp  main.cpp
{__name__C++ Qt5}/: CMakeLists.txt
{__name__C++ Qt5}/include/: QuickStart.hpp  mainWindow.hpp
{__name__C++ Qt5}/res/: mainWindow.ui  resources.qrc
{__name__C++ Qt5}/src/: CMakeLists.txt  main.cpp  mainWindow.cpp
{__name__C++ Qt5}/test/: QuickStartTest.cpp
{__name__Java}/: pom.xml
{__name__Java}/src/main/java/com/mycompany/{__name__}/: Calculator.java  {__name__}.java
{__name__Java}/src/main/java/helloworld/: Greater.java  HelloWorld.java
{__name__Java}/src/test/java/com/mycompany/{__name__}/: CalculatorTest.java  {__name__}Test.java
{__name__Rust Folder}/: .gitignore  Cargo.toml
{__name__Rust Folder}/src/: calculator.rs  {__name__}.rs
{__name__Web}/: .eslintrc.js  package.json  webpack.config.js
{__name__Web}/WebContent/: NewFile.html
{__name__Web}/scr/: calc.js  index.html
{__name__Web}/src/js/: about.js  calc.js  index.js  print.js
{__name__Web}/src/template/: about.ejs  anotherPage.ejs  anotherPage2.ejs  index.ejs
{__name__Web}/src/template/common/: footer.ejs  header.ejs  menu.ejs  menu1.ejs  menu2.ejs  menu3.ejs
{__name__Web}/test/: testCalcuator.js
{__name__c++ GTK}/: CMakeLists.txt
{__name__c++ GTK}/src/: CMakeLists.txt  main.cpp
{__name__python Folder}/: __init__.py
